// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileAttachmentEntry> default props 1`] = `
<div
  className="attached-file--container"
  key="Test files"
>
  <span
    className="fa fa-times-circle file-upload__remove--icon"
    onClick={[Function]}
    title="Remove file"
  />
  <span
    className="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
  />
  Test files
</div>
`;

exports[`<FileAttachmentEntry> no deletion 1`] = `
<div
  className="attached-file--container"
  key="Test files"
>
  <span
    className="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
  />
  Test files
</div>
`;

exports[`<FileAttachmentEntry> with deleteTitleText 1`] = `
<div
  className="attached-file--container"
  key="Test files"
>
  <span
    className="fa fa-times-circle file-upload__remove--icon"
    onClick={[Function]}
    title="Delete me"
  />
  <span
    className="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
  />
  Test files
</div>
`;

exports[`<FileAttachmentEntry> with downloadUrl 1`] = `
<div
  className="attached-file--container"
  key="Test files"
>
  <span
    className="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
  />
  <strong>
    <a
      href="http://get/me/my/file"
      title="Test files"
    >
      <div
        className="file-listing-filename"
      >
        Test files
      </div>
    </a>
  </strong>
</div>
`;
